# duoc-2026

./: pyproject.toml
01-herramientas-calculo-diferencial/: Ejerc_clase_21_marzo.ipynb  G1_MAT3131.ipynb  G2_MAT3131.ipynb  Manual_referencia_Python.ipynb  T1_MAT3131_FA.ipynb  funciones-simbolicas.ipynb  graficar-funciones-simbolicas.ipynb
02-inferencia-estadistica/: G0_A2_estudiantes.xlsx  Laboratorio_0_MAT4152.ipynb
02-inferencia-estadistica/EA1/: G0_A8_variabilidad.xlsx  Laboratorio_1_MAT4152.ipynb
02-inferencia-estadistica/EA1/Lab1/: G1_A2_poblacion_latencias.xlsx  G1_A5_microservicio_latencias.xlsx  G1_A6_lotes_procesos.xlsx  Laboratorio_0_MAT4152.ipynb  Laboratorio_1_MAT4152.ipynb
02-inferencia-estadistica/EA1/Lab2/: G2_A4_valoraciones_clientes.xlsx  G2_A5_tiempos_espera.xlsx  G3_A4_tratamiento_salud.xlsx  Laboratorio_2_MAT4152.ipynb  Laboratorio_3_MAT4152.ipynb
03-preprocesamiento-datos/: 1.2.2-guia.ipynb  1.2.3. Archivo práctico para actividad.ipynb
03-preprocesamiento-datos/EA1/: 1.1.5-guia.ipynb  1.2.2-guia.ipynb  1.3.2-guia.ipynb  1.3.3. Archivo práctico para actividad.ipynb  Análisis_Exploratorio.ipynb  Bienvenida Preprocesa.pptx  GP 1.2.1 Datos atipicos (Outliers)(1).pptx  GP 1.3.1 Análisis de correlación.pptx  GP_correlacion.ipynb  Outliers.ipynb
03-preprosecamiento-datos/: 1.1.5-guia.ipynb
04-programacion-ciencia-datos/EA1/: 1.1.2-guia.ipynb  1.2.2 Dejando limpio mi dataset.docx  1.2.2-guia.ipynb  20260320.ipynb  Notas_de_estudiantes.csv  clase_27-03-2026.ipynb
