[project]
name = "2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
